[package]
name = "kemkem"
version = "1.0.3"
edition = "2021"
description = "Unverified, unoptimized, and downright dirty implementation of the ML-KEM"
license = "MIT"
repository = "https://github.com/conorpo/kemkem"
readme = "README.md"
categories = ["cryptography"]
documentation = "https://docs.rs/kemkem"

[dependencies]
bitvec = "1.0.1"
rand = "0.8.5"
sha3 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"


[lib]
crate-type=["lib"]



[[bin]]
name = "simulate_with_serialization"

[[bin]]
name = "simulate"

[[bench]]
name = "768_funcs"
harness = false



